<resources>
    <string name="app_name">BMI Analyzer</string>
    <string name="next">Next</string>
    <string name="wellcom">Welcome Back</string>
    <string name="already">if you already have an account, log in</string>
    <string name="signUp">Sign Up</string>
    <string name="logIn">LOG IN</string>
    <string name="creat">Creat New Account</string>
    <string name="dont">if you do not already have an account</string>
    <string name="haveAccount">You Have An Account?</string>
    <string name="complete">Complete Your</string>
    <string name="save">Save Data</string>
    <string name="current">Current Status</string>
    <string name="btn_next"><u>Next</u></string>
    <string name="logout"><u>Logout</u></string>
    <string name="header">BMI Analyzer</string>
    <string name="hi_message">Welcome Back</string>
    <string name="Guidance_message">if you already have an account, log in</string>


</resources>