<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".add_bmi_record"
    android:gravity="center_horizontal">
    <TextView
        android:id="@+id/textView111"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:gravity="center"
        android:text="@string/header"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:flow_verticalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="50dp"
        />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete"
        android:textColor="@color/background"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Information"
        android:textColor="@color/background"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="86dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="Weight"
            android:textColor="@color/background"
            android:textStyle="bold" />

        <Space
            android:layout_width="52dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/weightDecre1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="+"
            android:textColor="#1C2F8F" />

        <EditText
            android:id="@+id/et_weight1"
            android:layout_width="47dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:text="0" />

        <Button
            android:id="@+id/weightIncre1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="-"
            android:textColor="#1E249C" />
        <TextView
            android:id="@+id/Kg"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="Kg"
            android:textColor="@color/background"
            android:textStyle="bold" />

        <Space
            android:layout_width="33dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="86dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="Lenght"
            android:textColor="@color/background"
            android:textStyle="bold" />

        <Space
            android:layout_width="52dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/lengthDecre1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="+"
            android:textColor="#1C2F8F" />

        <EditText
            android:id="@+id/ed_lenght1"
            android:layout_width="47dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:text="0" />

        <Button
            android:id="@+id/lengthIncre1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="-"
            android:textColor="#1E249C" />
        <TextView
            android:id="@+id/cm"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="Cm"
            android:textColor="@color/background"
            android:textStyle="bold" />

        <Space
            android:layout_width="33dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView112"
            android:layout_width="351dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="Date"
            android:textColor="@color/background"
            android:textStyle="bold" />

        <Space
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="date"
            tools:ignore="SpeakableTextPresentCheck" />

        <Space
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="351dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="Time"
            android:textColor="@color/background"
            android:textStyle="bold" />

        <Space
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/editTextTime"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            tools:ignore="SpeakableTextPresentCheck" />

        <Space
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="44dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />
</LinearLayout>